--- a/dd_styles.css
+++ b/dd_styles.css
@@ -40,11 +40,6 @@
 		font-size: 12;
 	}
 	
-	#sidebar textarea {
-		font-size: 12;
-		width: 100%;
-		height: 100%;
-	}
 	
 	.info {
 		border-style: solid;
@@ -72,6 +67,12 @@
 	
 	#palette {
 		position:absolute;
+	}
+	
+	#input_json{
+		height:100px;
+		font-size: 12;
+		width: 100%;
 	}
 	
 	
