--- a/dd_styles.css
+++ b/dd_styles.css
@@ -1,43 +1,12 @@
 	/*furniture*/
 	
-	#wrapper {
-		margin-left: 320px;
-	}
-	
-	#sidebar {
-		float: left;
-		width: 320px;
-		height: 100%;
-		margin-left: -321px;
-		zzbackground-image: url("sidebar.png");
-		background-color: #eee;
-		background-repeat: no-repeat;
-		background-size: 320px 100%;
-		border-right: solid 1px;
-	}
-	
-	#cleared {
+	.cleared {
 		clear: both;
 	}
 	
-	#sidebar h1 {
-		font-size: 16;
-		font-weight: bold;
-		margin: 10px;
-	}
-	
-	#sidebar h2 {
-		font-size: 14;
-		font-weight: bold;
-	}
-	
-	#sidebar h3 {
-		font-size: 12;
-		font-weight: bold;
-	}
-	
-	#sidebar label {
-		font-size: 12;
+	#toppal {
+		width: 200px;
+		background: linear-gradient(yellow, red);
 	}
 	
 	
@@ -65,13 +34,55 @@
 		width: 150px;
 	}
 	
-	#palette {
+	.palette {
 		position:absolute;
+		width: 340;
+		padding:0px;
 		border-style: solid;
 		border-width: 1px;
-		background-color: #eee;
-		font-size: 12;
+		resize:both;
+		overflow:auto;
 	}
+
+	.palheader {
+		background-color: #eee;
+		background: linear-gradient(to right, #dee, #fff);
+		font-size: 16;
+		font-weight: bold;
+		text-align:left;
+		vertical-align: center;
+		padding: 10px;
+	}
+
+	.palbody {
+		background-color: #fff;
+		font-size: 12;
+		padding: 10px;
+	}
+
+	.kingbutton {
+		background-color: #ddd;
+		border-style: solid;
+		border-width: 1px;
+		margin: 5px;
+		width: 5em;
+	}
+
+	.killbutton {
+		background-color: #faa;
+		border-style: solid;
+		border-width: 1px;
+		margin: 5px;
+		width: 1.2em;
+		height: 1.2em;
+		position:absolute;
+		top:0;
+		right:0;
+		
+	}
+
+	
+
 	
 	#input_json{
 		height:100px;
@@ -83,9 +94,10 @@
 	/* svg panel */
 	
 	#content {
-		float: right;
 		width: 100%;
 		height: 100%;
+		border-style: solid;
+		border-width: 1px;
 		overflow: scroll;
 	}
 	
@@ -96,6 +108,8 @@
 		text-align: center;
 		width: 1600px;
 		height: 1600px;
+		border-style: solid;
+		border-width: 1px;
 	}
 	
 
