--- a/dd_styles.css
+++ b/dd_styles.css
@@ -52,7 +52,7 @@
 
 	.palheader {
 		background-color: #eee;
-		background: linear-gradient(to right, #489, white);
+		background: linear-gradient(to right, #00708e, white);
 		font-size: 16;
 		font-weight: bold;
 		text-align:left;
@@ -99,7 +99,7 @@
 	
 	/* svg panel */
 	
-	#content {
+	#mycontent {
 		width: 100%;
 		height: 100%;
 		border-style: solid;
@@ -114,8 +114,6 @@
 		text-align: center;
 		width: 1600px;
 		height: 1600px;
-		border-style: solid;
-		border-width: 1px;
 	}
 	
 
