--- a/dd_styles.css
+++ b/dd_styles.css
@@ -14,7 +14,9 @@
 		border-style: solid;
 		border-width: 1px;
 		background-color: #eee;
+		margin-bottom: 10px;
 		font-size: 12;
+		padding-left:15px;
 	}
 
 	.byline {
