--- a/dd_styles.css
+++ b/dd_styles.css
@@ -183,19 +183,24 @@
 	.node.active {
 		opacity: 1;
 		font-weight: bold;
-		stroke-width: 3px;
+		stroke-width: 1.5px;
+		filter: drop-shadow(-0px -0px 3px #123);
+		-webkit-filter: drop-shadow(-0px -0px 3px #123);
 	}
 	
 	.group.active {
 		opacity: 1;
 		font-weight: bold;
-		stroke-width: 3px;
+		stroke-width: 1.5px;
+		filter: drop-shadow(-0px -0px 3px #123);
+		-webkit-filter: drop-shadow(-0px -0px 3px #123);
 	}
 	
 	.link.active {
 		opacity: .6;
-		font-weight: bold;
 		stroke-width: 4px;
+		filter: drop-shadow(-0px -0px 3px #123);
+		-webkit-filter: drop-shadow(-0px -0px 3px #123);
 	}
 	
 	.glink.active {
