--- a/dd_styles.css
+++ b/dd_styles.css
@@ -51,47 +51,84 @@
 	
 
 	
-	/*bipartite view*/
+	/*drawing nodes*/
 
 	.nodehairline{
 		stroke-width:0.5px;
 	}
 	
 	.nodelabel {
-		stroke: none;
-		font-size: 8px;
-		font-family: sans-serif;
-	}
-	
-	.grouplabel {
-		stroke: none;
+		stroke-width: 0px;
 		font-size: 10px;
 		font-family: sans-serif;
 	}
-	
-	.biglabel {
-		stroke: none;
-		font-size: 18px;
-		font-family: sans-serif;
+
+	.node.active {
+		opacity: 1;
+		font-weight: bold;
+		stroke-width: 2.5px;
+		filter: drop-shadow(-0px -0px 3px #123);
+		-webkit-filter: drop-shadow(-0px -0px 3px #123);
 	}
 	
-	.node {
+	.nodecircle {
 		stroke: #000;
 		stroke-width: 0.75px;
 	}
-	
-	.nodeinvis {
-		stroke: none;
-		opacity: 0;
+
+	.node.active .nodehairline{
+		stroke-width:2px;
 	}
 	
+	/* drawing links */
+
+
+	.link {
+		stroke-width: 3px;
+		opacity: 0.3;
+		fill: none;
+	}
+
+	.link.active {
+		opacity: .8;
+		stroke-width: 4px;
+		filter: drop-shadow(-0px -0px 3px #123);
+		-webkit-filter: drop-shadow(-0px -0px 3px #123);
+	}
+
+	.pt{
+	}
+
+	.pt.active {
+		stroke: #000;
+		stroke-width:0.5px;
+	}
+	
+	/*drawing groups*/
+
 	.group {
 		stroke: #000;
 		stroke-width: 1px;
 	}
+
+	.grouplabel {
+		stroke-width: 0px;
+		font-size: 12px;
+		font-family: sans-serif;
+	}
+
+	.group.active {
+		opacity: 1;
+		font-weight: bold;
+		stroke-width: 1.5px;
+		filter: drop-shadow(-0px -0px 3px #123);
+		-webkit-filter: drop-shadow(-0px -0px 3px #123);
+	}
 	
+	/*drawing axes etc*/
+
 	.axis {
-		stroke: #000;
+		stroke: #084;
 		stroke-width: 1.5px;
 	}
 	
@@ -103,58 +140,42 @@
 		font-family: sans-serif;
 	}
 	
-	.link {
-		stroke-width: 3px;
-		opacity: 0.3;
-		fill: none;
-	}
-	
-	.glink {
-		stroke: green;
-		opacity: 0.3;
-		fill: none;
+	.biglabel {
+		stroke: none;
+		font-size: 18px;
+		font-family: sans-serif;
 	}
 
-	.pt{
+	.tick {
+		font-size: 10px;
 	}
 
-	.pt.active {
-		stroke: #000;
-		stroke-width:0.5px;
-	}
-	
-	.node.active {
-		opacity: 1;
-		font-weight: bold;
+	.tick line {
+		stroke: #007696;
 		stroke-width: 1.5px;
-		filter: drop-shadow(-0px -0px 3px #123);
-		-webkit-filter: drop-shadow(-0px -0px 3px #123);
-	}
-	
-	.group.active {
-		opacity: 1;
-		font-weight: bold;
-		stroke-width: 1.5px;
-		filter: drop-shadow(-0px -0px 3px #123);
-		-webkit-filter: drop-shadow(-0px -0px 3px #123);
-	}
-	
-	.link.active {
-		opacity: .6;
-		stroke-width: 4px;
-		filter: drop-shadow(-0px -0px 3px #123);
-		-webkit-filter: drop-shadow(-0px -0px 3px #123);
 	}
 
-	.node.active .nodehairline{
-		stroke-width:2px;
+	.domain {
+		fill:none;
+		stroke: #084;
+		stroke-width: 1.5px;
+	}
+
+	.m2axis {
+		stroke:none;
+	}
+
+	.m1axis {
+		stroke:none;
+	}
+
+	.laxis {
+		stroke:none;
 	}
 	
-	.glink.active {
-		opacity: .6;
-		font-weight: bold;
-	}
 	
+	
+	/* tree */
 	.cartouche {
 		fill: #aa9;
 		opacity: 0.6;
@@ -162,6 +183,8 @@
 		stroke: black;
 	}
 	
+	/* cola */
+
 	.colagroup {
 		fill: #ba9;
 		fill-opacity: 0.5;
@@ -174,16 +197,3 @@
 		fill-opacity: 0.3;
 		stroke-width: 2px;
 	}
-
-	.tick {
-		font-size: 10px;
-	}
-
-	.tick line {
-		stroke: #007696;
-	}
-
-	.domain {
-		fill: #007696;
-	}
-	
