Basic Solidatus API support

--- a/dd_styles.css
+++ b/dd_styles.css
@@ -23,16 +23,23 @@
 		font-size:14;
 	}
 
-	.jsonbox {
+	.importbox {
 		width:600px;
 		height:500px;
 	}
 
-	.csvbox {
-		width:600px;
-		height:500px;
+	.headerstrip {
+		height:50px;
+		background-color:blue;
+		color:white;
+		font-size:20;
+		padding:15px;
 	}
-	
+
+	.notification_span {
+		font-size:14;
+	}
+
 	
 	/* svg panel */
 	
@@ -52,6 +59,8 @@
 		width: 1600px;
 		height: 1600px;
 	}
+
+
 	
 
 	
